Clean up main css for readability and fixing minor validation issues.

--- a/css/gsb_revamp.css
+++ b/css/gsb_revamp.css
@@ -1,43 +1,8 @@
-/* Bootstrap override */
-
-
-	.no-space [class*="span"] {
-    margin: 0px !important;
-    padding: 0px !important;
-     }
-	}
-
-
-
+/* Initial bootstrap override clear mechanism */
+.no-space [class*="span"] { margin: 0px !important; padding: 0px !important; }
 
 /* All Pages ------------------------------------------------------------- */
 body { margin:0; padding:0; }
-
-
-#page-container { margin: 0; padding: 0; background-image: linear-gradient(bottom, #f5f5f5 14%, #FFFFFF 79%);
-background-image: -o-linear-gradient(bottom, #f5f5f5 14%, #FFFFFF 79%);
-background-image: -moz-linear-gradient(bottom, #f5f5f5 14%, #FFFFFF 79%);
-background-image: -webkit-linear-gradient(bottom, #f5f5f5 14%, #FFFFFF 79%);
-background-image: -ms-linear-gradient(bottom, #f5f5f5 14%, #FFFFFF 79%);
-
-background-image: -webkit-gradient(
-	linear,
-	left bottom,
-	left top,
-	color-stop(0.50, #f5f5f5),
-	color-stop(0.80, #FFFFFF)
-);
-}
-
-#header-container { 
-background-image: url(../images/revamp-header-bg.png) !important; background-repeat: repeat-x; margin:0; padding:0;
-}
-
-
-#background-container {  background-image: url(/sites/all/themes/gsb_revamp/images/body-background-transparent-not-front.png); background-position: bottom; background-repeat: no-repeat; 
-}
-#background-container { opacity: 1.0}
-
 
 p { font-family: NewsGothicBT-Roman, sans-serif; font-size: 18px; }
 h1 { font-family: NewsGothicBT-Roman, sans-serif; font-size: 48px; }
@@ -49,8 +14,20 @@ h6 { font-family: NewsGothicBT-Demi, sans-serif; font-size: 18px; }
 ul { font-family: NewsGothicBT-Roman, sans-serif; }
 li { font-family: NewsGothicBT-Roman, sans-serif; }
 
-/* GENERAL LAYOUT ------------------------------------------------------------*/
+/* Styles for gradient background and background image on non .front pages -------------- */
 
+#page-container { margin: 0; padding: 0; background-image: linear-gradient(bottom, #f5f5f5 14%, #FFFFFF 79%);
+background-image: -o-linear-gradient(bottom, #f5f5f5 14%, #FFFFFF 79%);
+background-image: -moz-linear-gradient(bottom, #f5f5f5 14%, #FFFFFF 79%);
+background-image: -webkit-linear-gradient(bottom, #f5f5f5 14%, #FFFFFF 79%);
+background-image: -ms-linear-gradient(bottom, #f5f5f5 14%, #FFFFFF 79%);
+background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.50, #f5f5f5),color-stop(0.80, #FFFFFF));}
+
+#header-container { background-image: url(../images/revamp-header-bg.png) !important; background-repeat: repeat-x; margin:0; padding:0; }
+#background-container {  background-image: url(/sites/all/themes/gsb_revamp/images/body-background-transparent-not-front.png); background-position: bottom; background-repeat: no-repeat; }
+#background-container { opacity: 1.0 }
+
+/* GENERAL LAYOUT ------------------------------------------------------------*/
 #site-name  { display: none;}
 .navbar-inner { background: none; border: none; -webkit-box-shadow: none; box-shadow: none;  }
 
@@ -64,14 +41,11 @@ li { font-family: NewsGothicBT-Roman, sans-serif; }
 #main-content h2 { color: #2d6280; font-weight: 100; }
 #main-content p.intro { font-size: 30px;}
 
-/* Header --------------------------------*/
-
+/* Header ---------------==================================-----------------*/
 #header { padding: 0 !important; margin: 0 !important; }
 #header #logo { display: block; margin-top: 45px; }
 
-
-
-/* Name and Slogan ------------------------------*/
+/* Name and Slogan ----------------------------------------------------------*/
 #name-and-slogan { padding-top: 0px; width: 770px; }
 #site-slogan { font-size: 1.4em; margin-top: 5px !important;}
 
@@ -105,7 +79,6 @@ background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.21, 
 }
 #event-calendar-cta a { color: #fff; font-size: 17px; padding-top: 5px !important; margin-left: 20px; }
 
-
 /* Search Form --------------------------------------------------------------------*/
 #header-content { width: 200px;}
 #search-block-form { background-color: #e4e4e4; height: 35px; border: 1px solid #d3d3d3 }
@@ -113,19 +86,15 @@ background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.21, 
 #search-block-form input.search-query { background-color: transparent; border: none; width: auto !important; float: left !important; padding: 0;  padding-left: 20px; padding-top: 10px;padding-right: 25px; border-radius: 0px !important; -webkit-border-radius: 0px !important; box-shadow: none; -webkit-box-shadow: none !important;}
 #search-block-form input:-moz-placeholder, textarea:-moz-placeholder { color: #414141;}
 #search-block-form input::-webkit-input-placeholder { color: #414141;} 
-#search-block-form input:-placeholder, textarea:-placeholder { color: #414141;} 
+#search-block-form input:-placeholder, textarea:-placeholder { color: #414141;}  
 
- 
-
-/* Audience Navigation ------------------------------------------------------------*/
-
+/* Audience Navigation (homepage) ------------------------------------------------------------*/
 .menu-name-menu-audience-navigation { }
 .menu-name-menu-audience-navigation ul { }
 .menu-name-menu-audience-navigation ul li { width: 268px; height: 49px; background-color: #990000; color: #fff; margin-bottom: 5px; list-style-type: none; }
 .menu-name-menu-audience-navigation ul li a { color: #fff; size: 16px; }
 
-/* Secondary Navigation --------------------------------*/
-
+/* Secondary Navigation (non-homepage) --------------------------------*/
 #block-menu-menu-secondary-navigation { width: 236px;
 padding-right: 5px; padding-left: 5px; border-top: 10px solid #231f20;
 background-image: linear-gradient(bottom, #FFFFFF 25%, #E7E7E7 63%);
@@ -153,26 +122,24 @@ background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0.25, 
 
 
 
-/* Footer --------------------------------*/
-
+/* Footer General --------------------------------*/
 #footer { background-image: url(../images/footer-background.png); clear: both; margin-top: 0px !important; padding-top: 45px !important;} 
-#footer-content { }
 #footer h2 { text-indent: -10000px; display: none;}
-#footer #block-menu-menu-footer-menu ul { margin-left: 0px; text-decoration: none; list-style-type: none; list-style-image: none; width:565px; overflow:hidden; }
-#footer #block-menu-menu-footer-menu ul li { text-decoration: none; list-style-type: none; list-style-image: none; line-height:1.5em;
-  
-  display:inline;}
+#footer .block { float: left; display: inline;}
 
+/* Footer Follow-Us block ---------------------------------- */
+#block-block-2 { width: 270px; margin-right: 35px; }
+#block-block-2 h3 { margin: 0; font-family: NewsGothicBT-Bold, sans-serif; font-size: 18px; color: #8a0000; padding-bottom: 5px; border-bottom: 1px solid grey;  }
+
+/* Footer menu block ----------------------------------------- */
+#footer #block-menu-menu-footer-menu ul { margin-left: 0px; text-decoration: none; list-style-type: none; list-style-image: none; width:565px; overflow:hidden; }
+#footer #block-menu-menu-footer-menu ul li { text-decoration: none; list-style-type: none; list-style-image: none; line-height:1.5em; display:inline;}
 #footer #block-menu-menu-footer-menu li { width: 195px; float: left; margin-right: 73px;}
 #footer #block-menu-menu-footer-menu a { color: #8a0000; font-family: NewsGothicBT-Bold, sans-serif; font-size: 15px; }
 #footer #block-menu-menu-footer-menu { text-transform: uppercase; }
-#footer .block { float: left; display: inline;}
 
+/* Footer e-News Signup block----------------------------- */
 #block-block-1 { width: 300px;}
-#block-block-2 { width: 270px; margin-right: 35px; }
-#block-block-2 h3 { margin: 0; font-family: NewsGothicBT-Bold, sans-serif; font-size: 18px; color: #8a0000; padding-bottom: 5px; border-bottom: 1px solid grey;  }
-/* e-News Signup ----------------------------- */
-
 
 
 
